endpoints: create /list to get Coins from service

--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "author": "Jhon J Velásquez S.",
     "license": "ISC",
     "dependencies": {
+        "axios": "^0.21.1",
         "bcryptjs": "^2.4.3",
         "coingecko-api": "^1.0.10",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "express-router-group": "^0.1.4",
         "express-validator": "^6.10.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.12.6"
