--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "start": "node app.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "linter": "./node_modules/.bin/eslint app/**/*.js --fix"
     },
     "author": "Jhon J Velásquez S.",
     "license": "ISC",
@@ -19,5 +20,8 @@
         "express-validator": "^6.10.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.12.6"
+    },
+    "devDependencies": {
+        "eslint": "^7.25.0"
     }
 }
