--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "mongoose": "^5.12.6"
     },
     "devDependencies": {
-        "eslint": "^7.25.0"
+        "eslint": "^7.25.0",
+        "eslint-config-airbnb-base": "^14.2.1",
+        "eslint-plugin-import": "^2.22.1"
     }
 }
