--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "description": "Cryptocurrencies monitor",
     "main": "index.js",
     "scripts": {
-        "start": "node app.js",
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "NODE_ENV=development nodemon app",
+        "start": "NODE_ENV=production node app.js",
+        "test": "NODE_ENV=test jest --verbose --detectOpenHandles",
         "linter": "./node_modules/.bin/eslint app/**/*.js --fix"
     },
     "author": "Jhon J Velásquez S.",
@@ -24,6 +25,12 @@
     "devDependencies": {
         "eslint": "^7.25.0",
         "eslint-config-airbnb-base": "^14.2.1",
-        "eslint-plugin-import": "^2.22.1"
+        "eslint-plugin-import": "^2.22.1",
+        "jest": "^26.6.3",
+        "jtest": "^0.0.1",
+        "supertest": "^6.1.3"
+    },
+    "jest": {
+        "testEnvironment": "node"
     }
 }
