--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "scripts": {
         "dev": "NODE_ENV=development nodemon app",
         "start": "NODE_ENV=production node app.js",
-        "test": "NODE_ENV=test jest --verbose --detectOpenHandles",
-        "linter": "./node_modules/.bin/eslint app/**/*.js --fix"
+        "linter": "./node_modules/.bin/eslint app/**/*.js --fix",
+        "testj": "NODE_ENV=test jest --verbose --runInBand --silent ",
+        "test:watch": "npm run test -- --watch",
+        "test": "mocha --timeout 10000 --exit"
     },
     "author": "Jhon J Velásquez S.",
     "license": "ISC",
@@ -20,17 +22,19 @@
         "express": "^4.17.1",
         "express-validator": "^6.10.1",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.12.6"
+        "mongoose": "^5.12.7",
+        "nodemon": "^2.0.7",
+        "swagger-jsdoc": "^4.2.0",
+        "swagger-ui-express": "^4.1.6"
     },
     "devDependencies": {
         "eslint": "^7.25.0",
         "eslint-config-airbnb-base": "^14.2.1",
         "eslint-plugin-import": "^2.22.1",
-        "jest": "^26.6.3",
-        "jtest": "^0.0.1",
         "supertest": "^6.1.3"
     },
     "jest": {
-        "testEnvironment": "node"
+        "testEnvironment": "node",
+        "verbose": true
     }
 }
