README: How to use the code

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
-PORT=
-MONGODB_CNN=
-SECRETKEY=
+#Define a port 
+PORT=8081
+
+#Secret key must be strong
+SECRETKEY=exampledghajsdghhv8932dggg96jk
+
+# Define your own link connection  
+MONGODB_CNN=mongodb+srv://USER:PASSWORD@clusterw.p6tun.mongodb.net/DATABASE
