Test: Integration test implemented with mocha

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ SECRETKEY=exampledghajsdghhv8932dggg96jk
 
 # Define your own link connection  
 MONGODB_CNN=mongodb+srv://USER:PASSWORD@clusterw.p6tun.mongodb.net/DATABASE
+
+# Define your own link connection  
+MONGODB_TEST=mongodb+srv://USER:PASSWORD@clusterw.p6tun.mongodb.net/DATABASE_TEST
