--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,10 @@
 {
   "env": {
-    "browser": true,
+    "browser": false,
     "commonjs": true,
-    "es2021": true
+    "es2021": true,
+    "node": true,
+    "mocha": true
   },
   "extends": [
     "airbnb-base"
